--- a/Task01/Style.css
+++ b/Task01/Style.css
@@ -1,17 +1,19 @@
 body {
     font-family:Verdana, Geneva, Tahoma, sans-serifS;
+    text-align: center;
     margin: 0;
     padding: 0;
 }
 
 header {
     background-color: #333;
+    text-align: center;
     color: #fff;
     padding: 20px;
 }
 
 header h1 {
-    margin: 0;
+    margin-top: 10px;
 }
 
 nav ul {
@@ -35,14 +37,42 @@ section {
 }
 
 #about {
+    text-align: center;
     font-size: 20px;
 }
 #contact{
     margin-bottom: 80px;
 }
+#contact button{
+    padding: 10px;
+    border-radius: 8px;
+    background-color: black;
+    color: white;
+}
+#contact textarea{
+    width: 183px;
+    height: 15px;
+}
+#skills ul {
+    text-align: center;
+    font-weight: bold;
+    color:#333;
+}
+#skills ul li {
+    display: inline-block;
+    margin: 0 10px; 
+}
+#Resume-form button{
+    border-radius: 8px;
+    padding: 10px;
+    font-size: medium;
+    background-color: black;
+    color: white;
+}
 
 h2 {
     margin-top: 0;
+    text-shadow: 10px 10px 5px #7e7e7e;
 }
 
 .project {
