--- a/Task02/Style.css
+++ b/Task02/Style.css
@@ -6,7 +6,7 @@ body, h1, h2, h3, p, ul, li {
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f5f5f5;
+    background-color: rgb(214, 225, 245);
     color: #333;
     text-align: center; 
 }
@@ -41,7 +41,8 @@ h2 {
     font-weight: bold;
     text-align:left;
     padding: 40px;
-    background-color:#ffb6c1  ;
+    background-color: #ffd369 ; 
+    width: max-content;
 }
 
 nav {
@@ -147,12 +148,7 @@ form {
 
 #contact{
     margin-bottom: 40px;
-    background-color: #d6d6d6;
-}
-
-#contact textarea{
-    width: 183px;
-    height: 15px;
+    background-color: #afb1be;
 }
 
 button {
